Use AssertJ fluent assertions java library